--- a/index.html
+++ b/index.html
@@ -248,6 +248,47 @@
           </li>
         </ul>
       </section>
+      <section class="categories">
+        <h2 class="visually-hidden">Категории товаров</h2>
+        <ul class="categories-list">
+          <li class="categories-item">
+            <a class="categories-link" href="#">
+              <img class="categories-image" src="/images/categories/virtual.png" width="160" height="160">
+              <p class="categories-text">Виртуальная реальность</p>
+            </a>
+          </li>
+          <li class="categories-item">
+            <a class="categories-link" href="#">
+              <img class="categories-image" src="/images/categories/monopod.png" width="160" height="160">
+              <p class="categories-text">Моноподы <br>для селфи</p>
+            </a>
+          </li>
+          <li class="categories-item">
+            <a class="categories-link" href="#">
+              <img class="categories-image" src="/images/categories/camera.png" width="160" height="160">
+              <p class="categories-text">Экшн-камеры</p>
+            </a>
+          </li>
+          <li class="categories-item">
+            <a class="categories-link" href="#">
+              <img class="categories-image" src="/images/categories/fitnes.png" width="160" height="160">
+              <p class="categories-text">Фитнес-браслеты</p>
+            </a>
+          </li>
+          <li class="categories-item">
+            <a class="categories-link" href="#">
+              <img class="categories-image" src="/images/categories/watch.png" width="160" height="160">
+              <p class="categories-text">Умные часы</p>
+            </a>
+          </li>
+          <li class="categories-item">
+            <a class="categories-link" href="#">
+              <img class="categories-image" src="/images/categories/kvadro.png" width="160" height="160">
+              <p class="categories-text">Квадрокоптеры</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
