Добавил категории товаров

--- a/index.html
+++ b/index.html
@@ -289,6 +289,29 @@
           </li>
         </ul>
       </section>
+      <div class="delivery-wrapper">
+        <div class="delivery-container">
+          <ul class="delivery-list">
+            <li class="delivery-item">
+              <button class="delivery-item-button delivery-item-button-current" type="button">
+                <span class="delivery-text">Доставка</span>
+              </button>
+              <button class="delivery-item-button" type="button">
+                <span class="delivery-text">Гарантия</span>
+              </button>
+              <button class="delivery-item-button" type="button">
+                <span class="delivery-text">Кредит</span>
+              </button>
+            </li>
+          </ul>
+          <div class="delivery-desc">
+            <h3 class="delivery-desc-title">Доставка</h3>
+            <p class="delivery-desc-text">Мы&nbsp;с&nbsp;удовольствием доставим ваш товар прямо
+              к&nbsp;вашему подъезду совершенно бесплатно! Ведь
+              мы&nbsp;неплохо заработаем, поднимая его на&nbsp;ваш этаж.</p>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
