Исправил выпадающий каталог

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a class="navigation-link-second" href="#">Корзина
             <div class="thumb">2</div>
           </a>
-          <div class="popover popover-cart hidden">
+          <div class="popover popover-cart" style="display:none">
             <button class="popover-close-button button button-light">
               <span class="visually-hidden">Закрыть</span>
             </button>
@@ -86,7 +86,7 @@
             <li class="product-catalog-item contacts"><a class="catalog-link" href="#">Контакты</a></li>
           </ul>
         </div>
-        <div class="subcatalog hidden">
+        <div class="subcatalog" style="display:none">
           <ul class="subcatalog-list list-one">
             <li class="subcatalog-item">
               <a class="subcatalog-link active-point" href="#">Виртуальная реальность</a>
