Доделал блок с гарантией

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               </div>
             </div>
             <div class="slider-content">
-              <p class="number-one">01</p>
+              <span class="number-one">01</span>
               <p class="slider-title">Порхает как бабочка, жалит как пчела!</p>
               <p class="slider-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
               <div class="slider-pagination-container">
@@ -171,7 +171,7 @@
               <img class="slider-image" src="images/slider-2.png" width="560px" height="560px" alt="">
             </div>
             <div class="slider-content">
-              <p class="number-one">02</p>
+              <span class="number-one">02</span>
               <p class="slider-title">Худеем <br>правильно!</p>
               <p class="slider-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
               <div class="slider-pagination-container">
@@ -207,7 +207,7 @@
               <img class="slider-image" src="images/slider-3.png" width="560px" height="560px" alt="">
             </div>
             <div class="slider-content">
-              <p class="number-one">03</p>
+              <span class="number-one">03</span>
               <p class="slider-title">Делай селфи, <br>как Бен Стиллер!</p>
               <p class="slider-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
               <div class="slider-pagination-container">
@@ -304,11 +304,21 @@
               </button>
             </li>
           </ul>
-          <div class="delivery-desc">
+          <div class="delivery-desc" style="display:block">
             <h3 class="delivery-desc-title">Доставка</h3>
             <p class="delivery-desc-text">Мы&nbsp;с&nbsp;удовольствием доставим ваш товар прямо
               к&nbsp;вашему подъезду совершенно бесплатно! Ведь
               мы&nbsp;неплохо заработаем, поднимая его на&nbsp;ваш этаж.</p>
+          </div>
+          <div class="delivery-desc guarantee-desc" style="display:none">
+            <h3 class="delivery-desc-title guarantee-desc-title">Гарантия</h3>
+            <p class="delivery-desc-text guarantee-desc-text">Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас
+              сгорит дом&nbsp;&mdash; не&nbsp;переживайте, мы&nbsp;выдадим вам новый.
+              Товар, не&nbsp;дом, конечно&nbsp;же.</p>
+          </div>
+          <div class="delivery-desc credit-desc" style="display:none">
+            <h3 class="delivery-desc-title credit-desc-title">Кредит</h3>
+            <p class="delivery-desc-text credit-desc-text">Залезть в&nbsp;долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
           </div>
         </div>
       </div>
