Добавил кнопку доставки

--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
           </li>
         </ul>
       </section>
-      <div class="delivery-wrapper">
+      <section class="delivery-wrapper">
+        <h2 class="visually-hidden">Доставим редкий товар под заказ</h2>
         <div class="delivery-container">
           <ul class="delivery-list">
             <li class="delivery-item">
@@ -321,7 +322,12 @@
             <p class="delivery-desc-text credit-desc-text">Залезть в&nbsp;долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
           </div>
         </div>
-      </div>
+        <button class="delivery-wrapper-button" type="button">
+          <span class="button-image"></span>
+          <span class="button-text">Доставим редкий товар под заказ</span>
+          <span class="button-icon"></span>
+        </button>
+      </section>
     </main>
   </body>
 </html>
