--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="page-header">
-      <h1 class="visually-hidden">Device</h1>
+      <h1 class="visually-hidden">Интернет-магазин «Девайс»</h1>
       <nav class="navigation">
         <a class="logo-link" href="index.html">
           <svg class="logo-device" width="145" height="37" viewBox="0 0 145 37" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M27.22.39v35.3h-7.6v-2.4c-1.7 1.9-4.1 3.1-7.51 3.1C5.5 36.39 0 30.59 0 23.09c0-7.5 5.5-13.3 12.1-13.3 3.41 0 5.91 1.2 7.51 3.1V.39h7.6Zm-7.6 22.7c0-3.8-2.5-6.2-6.01-6.2-3.5 0-6 2.4-6 6.2 0 3.8 2.5 6.2 6 6.2 3.5-.1 6-2.4 6-6.2ZM43.73 29.59c2.1 0 3.8-.8 4.8-1.9l6.1 3.5c-2.5 3.4-6.2 5.2-11 5.2-8.6 0-14.01-5.8-14.01-13.3 0-7.5 5.4-13.3 13.4-13.3 7.41 0 12.82 5.7 12.82 13.3 0 1.1-.1 2.1-.3 3H37.63c1 2.6 3.3 3.5 6.1 3.5Zm4.6-9.1c-.8-2.9-3.1-4-5.4-4-2.9 0-4.8 1.4-5.5 4h10.9ZM82.16 10.49l-9.31 25.2h-8.6l-9.31-25.2h8.4l5.3 16 5.31-16h8.2ZM83.46 10.49h7.6v25.2h-7.6v-25.2ZM93.67 23.09c0-7.5 5.7-13.3 13.4-13.3 4.9 0 9.21 2.6 11.41 6.5l-6.6 3.8c-.9-1.8-2.7-2.8-4.9-2.8-3.3 0-5.71 2.4-5.71 5.8 0 3.5 2.4 5.8 5.7 5.8 2.2 0 4.1-1.1 4.9-2.8l6.61 3.8c-2.1 3.9-6.4 6.5-11.4 6.5-7.71 0-13.41-5.8-13.41-13.3ZM132.9 29.59c2.1 0 3.8-.8 4.8-1.9l6.1 3.5c-2.5 3.4-6.2 5.2-11 5.2-8.61 0-14.02-5.8-14.02-13.3 0-7.5 5.5-13.3 13.41-13.3 7.4 0 12.81 5.7 12.81 13.3 0 1.1-.1 2.1-.3 3h-17.91c1 2.6 3.3 3.5 6.1 3.5Zm4.7-9.1c-.8-2.9-3.1-4-5.4-4-2.91 0-4.81 1.4-5.51 4h10.9Z" fill="#000"/><path d="M83.46.39v10.1l7.6-10.1h-7.6Z" fill="#510094"/></svg>
@@ -83,7 +83,7 @@
           <ul class="product-catalog-list">
             <li class="product-catalog-item delivery"><a class="catalog-link" href="#">Доставка</a></li>
             <li class="product-catalog-item guarantee"><a class="catalog-link" href="#">Гарантия</a></li>
-            <li class="product-catalog-item contacts"><a class="catalog-link" href="#">Контакты</a></li>
+            <li class="product-catalog-item contact"><a class="catalog-link" href="#">Контакты</a></li>
           </ul>
         </div>
         <div class="subcatalog" style="display:none">
@@ -322,12 +322,37 @@
             <p class="delivery-desc-text credit-desc-text">Залезть в&nbsp;долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
           </div>
         </div>
-        <button class="delivery-wrapper-button" type="button">
-          <span class="button-image"></span>
-          <span class="button-text">Доставим редкий товар под заказ</span>
-          <span class="button-icon"></span>
-        </button>
       </section>
+      <button class="delivery-wrapper-button" type="button">
+        <span class="button-image"></span>
+        <span class="button-text">Доставим редкий товар под заказ</span>
+        <span class="button-icon"></span>
+      </button>
+      <div class="description-wrapper">
+        <section class="description">
+          <span class="pic"></span>
+          <h2 class="description-title">О нас</h2>
+          <p class="description-text">Огромный выбор гаджетов не&nbsp;оставит равнодушным гика, который есть в&nbsp;каждом из&nbsp;нас.</p>
+          <p class="description-text">Мы&nbsp;можем доставить ваш товар в&nbsp;самые отдалённые уголки России транспортными компаниями:</p>
+          <ul class="description-list">
+            <li class="description-item">Меловые линии</li>
+            <li class="description-item">СДИК</li>
+            <li class="description-item">ТоксБерри</li>
+          </ul>
+          <a class="description-button button-link" href="#">Подробнее о нас</a>
+        </section>
+        <section class="contacts">
+          <span class="pic"></span>
+          <h2 class="contacts-title">Контакты</h2>
+          <p class="contacts-text">Вы&nbsp;можете забрать товар сами, заехав в&nbsp;наш офис. <br>Заодно сможете проверить работоспособность покупки.</p>
+          <p class="contacts-text-title">Интернет-магазин «Девайс»</p>
+          <address class="address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
+          <a class="contacts-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          <p class="contacts-text-title">Время работы</p>
+          <p class="contacts-text text-time">пн—пт: с 10:00 до 22:00 <br>сб—вс: с 10:00 до 19:00</p>
+          <a class="contacts-button button-link" href="#">Напишите нам</a>
+        </section>
+      </div>
     </main>
   </body>
 </html>
