Добавил блок с подпиской

--- a/index.html
+++ b/index.html
@@ -353,6 +353,12 @@
           <a class="contacts-button button-link" href="#">Напишите нам</a>
         </section>
       </div>
+      <section class="subscription">
+        <div class="subscription-wrapper">
+          <h2 class="subscription-title">Подпишитесь на рассылку</h2>
+          <p class="subscription-text">Еженедельный дайджест с&nbsp;обзорами новинок, длительными тест-драйвами, распаковками, а&nbsp;также акции, спецпредложения и&nbsp;вот это вот всё.</p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
